*0.12.1* (20th April, 2005)

* Upgraded to Active Record 1.10.1, Action Pack 1.8.1, Action Mailer 0.9.1, Action Web Service 0.7.1


*0.12.0* (19th April, 2005)

* Fixed that purge_test_database would use database settings from the development environment when recreating the test database #1122 [rails@cogentdude.com]

* Added script/benchmarker to easily benchmark one or more statement a number of times from within the environment. Examples:

    # runs the one statement 10 times
    script/benchmarker 10 'Person.expensive_method(10)'
    
    # pits the two statements against each other with 50 runs each
    script/benchmarker 50 'Person.expensive_method(10)' 'Person.cheap_method(10)'

* Added script/profiler to easily profile a single statement from within the environment. Examples:

    script/profiler 'Person.expensive_method(10)'
    script/profiler 'Person.expensive_method(10)' 10 # runs the statement 10 times

* Added Rake target clear_logs that'll truncate all the *.log files in log/ to zero #1079 [Lucas Carlson]

* Added lazy typing for generate, such that ./script/generate cn == ./script/generate controller and the likes #1051 [k@v2studio.com]

* Fixed that ownership is brought over in pg_dump during tests for PostgreSQL #1060 [pburleson@gmail.com]

* Upgraded to Active Record 1.10.0, Action Pack 1.8.0, Action Mailer 0.9.0, Action Web Service 0.7.0, Active Support 1.0.4


*0.11.1* (27th March, 2005)

* Fixed the dispatch.fcgi use of a logger

* Upgraded to Active Record 1.9.1, Action Pack 1.7.0, Action Mailer 0.8.1, Action Web Service 0.6.2, Active Support 1.0.3


*0.11.0* (22th March, 2005)

* Removed SCRIPT_NAME from the WEBrick environment to prevent conflicts with PATH_INFO #896 [Nicholas Seckar]

* Removed ?$1 from the dispatch.f/cgi redirect line to get rid of 'complete/path/from/request.html' => nil being in the @params now that the ENV["REQUEST_URI"] is used to determine the path #895 [dblack/Nicholas Seckar]
