@@ -26,7 +26,7 @@ TEST_DIRS   = %w( fixtures unit functional mocks mocks/development mocks/test )
 
 LOG_FILES    = %w( server.log development.log test.log production.log )
 HTML_FILES   = %w( 404.html 500.html index.html favicon.ico javascripts/prototype.js )
-BIN_FILES    = %w( generate destroy breakpointer console console_sandbox server update runner profiler benchmarker )
+BIN_FILES    = %w( generate destroy breakpointer console server update runner profiler benchmarker )
 
 VENDOR_LIBS = %w( actionpack activerecord actionmailer activesupport actionwebservice railties )
 
