@@ -2,15 +2,18 @@
 irb = RUBY_PLATFORM =~ /mswin32/ ? 'irb.bat' : 'irb'
 
 require 'optparse'
-options = {}
+options = { :sandbox => false, :profile => false, :irb => irb }
 OptionParser.new do |opt|
   opt.on('-s', '--sandbox', 'Rollback database modifications on exit.') { |options[:sandbox]| }
+  opt.on('--profile', 'Profile the session and print results on exit.') { |options[:profile]| }
+  opt.on("--irb=[#{irb}]", 'Invoke a different irb.') { |options[:irb]| }
   opt.parse!(ARGV)
 end
 
-libs =  " -r #{File.dirname(__FILE__)}/../config/environment"
-libs << " -r #{File.dirname(__FILE__)}/console_sandbox" if options[:sandbox]
-libs << " -r irb/completion"
+libs =  " -r irb/completion"
+libs << " -r #{File.dirname(__FILE__)}/../config/environment"
+libs << " -r console_sandbox" if options[:sandbox]
+libs << " -r console_profile" if options[:profile]
 
 ENV['RAILS_ENV'] = ARGV.first || 'development'
 if options[:sandbox]
@@ -19,4 +22,4 @@ if options[:sandbox]
 else
   puts "Loading #{ENV['RAILS_ENV']} environment."
 end
-exec "#{irb} #{libs}"
+exec "#{options[:irb]} #{libs} --prompt-mode simple"
